test-cases/valid/reject/equality_bad_operand_type.ul
void main() {
    print foo() == 4; // Can't use void operand
}

void foo() {

}
